# klaser-meetings

./: .gitignore  Makefile  README.md  docker-compose.yml  identity-cutover.md
backend/: .env.example  alembic.ini  pyproject.toml  requirements.txt  start.sh
backend/alembic/: env.py
backend/alembic/versions/: a1b2c3d4e5f6_meeting_invites.py  a2b4c6d8e0f1_participant_directory_fields.py  b3d5f7a9c1e2_participant_edit_permission.py  b59cfe352cb7_meetings_core.py  c2d4e6f8a0b1_action_item_done.py  d3f1a9c4e2b7_participants.py  d4e6f8a0b2c3_deferred_from_topic.py  e5f7b1c3d9a2_tenant_settings.py  f7a2c8e1b3d5_saved_dates.py  f9a3c1d7e2b4_participant_public_send.py
backend/app/: config.py  db.py  main.py  models.py  schemas.py
backend/app/routes/: action_items.py  dashboard.py  decisions.py  health.py  meetings.py  members.py  participants.py  rsvp.py  saved_dates.py  settings.py  topic_pool.py
backend/app/services/: defer_topic.py  identity.py  mail.py  meeting_summary.py  meeting_utils.py  permissions.py
frontend/: .env.example  index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  main.tsx
frontend/src/components/: ApprovalPanel.tsx  AttendanceList.tsx  CloseTopicModal.tsx  FollowUpModal.tsx  GoogleSignInButton.tsx  InviteActions.tsx  InvitePreviewModal.tsx  InviteesPanel.tsx  Layout.tsx  LiveTopicCard.tsx  MeetingDetailsForm.tsx  PublishModal.tsx  StatusStepper.tsx
frontend/src/lib/: api.ts  auth.tsx  meetingLabels.ts  permissions.ts  products.ts
frontend/src/pages/: ActionItems.tsx  Home.tsx  MeetingDetail.tsx  Meetings.tsx  Participants.tsx  ProtocolView.tsx  Register.tsx  Rsvp.tsx  Settings.tsx  TopicPool.tsx  Users.tsx
